added delete,search,insert,update form in html

--- a/includes/html/delete-form.html
+++ b/includes/html/delete-form.html
@@ -1,13 +1,15 @@
-<form method="post" action="<?php echo $_SERVER['PHP_SELF']; ?>">
-  <fieldset>
-    <legend>Delete</legend>
-    DELETE FROM artist WHERE
-    <select name="current-attribute" id="current-attribute">
-      <option>artist_id</option>
-      <option>artist_name</option>
-    </select>
-    = <input type="text" name="pattern" required>
-      <input type="hidden" name="submitted" value="4">
-    <p><input type="submit" value="delete"></p>
-  </fieldset>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Delete Account</title>
+</head>
+<body>
+    <h2>Delete Account</h2>
+    <form action="../php/delete.php" method="post">
+        <label>Column to Match: <input type="text" name="pattern_column" required></label><br><br>
+        <label>Pattern Value: <input type="text" name="pattern_value" required></label><br><br>
+        <button type="submit">Delete</button>
+    </form>
+</body>
+</html>
