--- a/includes/html/search-form.html
+++ b/includes/html/search-form.html
@@ -1,8 +1,14 @@
-<form method="post" action="<?php echo $_SERVER['PHP_SELF']; ?>">
-  <fieldset>
-    <legend>Search</legend>
-    <input type="text" name="search" autofocus required>
-    <input type="hidden" name="submitted" value="1">
-    <p><input type="submit" value="search"></p>
-  </fieldset>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Search Accounts</title>
+</head>
+<body>
+    <h2>Search Accounts</h2>
+    <form action="../php/search.php" method="get">
+        <label>Search: <input type="text" name="pattern" required></label><br><br>
+        <button type="submit">Search</button>
+    </form>
+</body>
+</html>
