--- a/includes/html/insert-form.html
+++ b/includes/html/insert-form.html
@@ -1,19 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Insert New Account</title>
-</head>
-<body>
-    <h2>Insert New Account</h2>
-    <form action="../php/insert.php" method="post">
-        <label>Site/App Name: <input type="text" name="website_name" required></label><br><br>
-        <label>URL: <input type="text" name="url"></label><br><br>
-        <label>Email: <input type="email" name="email" required></label><br><br>
-        <label>Username: <input type="text" name="username" required></label><br><br>
-        <label>Password: <input type="password" name="password" required></label><br><br>
-        <label>Comment: <textarea name="comment" rows="4" cols="50"></textarea></label><br><br>
-        <button type="submit">Add Account</button>
-    </form>
-</body>
-</html>
+<form method="post" action="<?php echo $_SERVER['PHP_SELF']; ?>">
+    <fieldset>
+        <legend>Insert Account</legend>
+        <input type="text" name="app_name" placeholder="App Name" required><br>
+        <br>
+        <input type="URL" name="URL" placeholder="URL (optional)"><br>
+        <br>
+        <textarea name="COMMENT" placeholder="COMMENT (optional)"></textarea><br>
+        <br>
+        <input type="text" name="first_name" placeholder="First Name" required><br>
+        <br>
+        <input type="text" name="last_name" placeholder="Last Name" required><br>
+        <br>
+        <input type="text" name="email id" placeholder="Email" required><br>
+        <br>
+        <input type="text" name="username" placeholder="Username" required><br>
+        <br>
+        <input type="password" name="password" placeholder="Password" required><br>
+        <br>
+        
+        <input type="hidden" name="submitted" value="INSERT_ACCOUNT"><br>
+        <input type="submit" value="Insert">
+    </fieldset>
+  </form>
+  
