made changes in index.php

--- a/includes/html/insert-form.html
+++ b/includes/html/insert-form.html
@@ -11,7 +11,7 @@
         <br>
         <input type="text" name="last_name" placeholder="Last Name" required><br>
         <br>
-        <input type="text" name="email id" placeholder="Email" required><br>
+        <input type="text" name="email" placeholder="Email" required><br>
         <br>
         <input type="text" name="username" placeholder="Username" required><br>
         <br>
